# relax

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  lib.rs  main.rs  overlay.rs
src/core/: autostart.ts  event.ts  init.ts  overlay.ts  timer.ts  tray.ts  utils.ts  window.ts
src/pages/: HomePage.tsx  OverlayPage.tsx
